<resources>
    <string name="app_name">eMRTD Connector Example</string>

    <string name="return_result_only">Only return read result</string>
    <string name="instructions">Insert the 6 digit CAN or the info from the MRZ.</string>
    <string name="can">CAN</string>
    <string name="can_hint">123456</string>
    <string name="document_number">Document Number</string>
    <string name="document_number_hint">DOCUMENT NUMBER</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="date_of_expiry">Date of expiry</string>
    <string name="mrz_date_hint">YYMMDD</string>
    <string name="access_chip_using_can">Access Chip using CAN</string>
    <string name="access_chip_using_mrz_info">Access Chip using MRZ Info</string>

    <string name="access_chip">Access Chip</string>
    <string name="place_phone_on_document">Place Phone on Document</string>
    <string name="nfc_unavailable">NFC unavailable</string>
    <string name="cancel">Cancel</string>
    <string name="closed_by_remote_endpoint_message">WebSocket closed by remote endpoint\n%1d: %2s</string>
    <string name="closed_by_this_endpoint_message">WebSocket closed by this endpoint\n%1d: %2s</string>
    <string name="check_access_key">Please verify the Access Key (CAN or MRZ Info).</string>
    <string name="check_connection">Network communication failed. Please check connection and try again.</string>
    <string name="post_to_result_server_failed">The Document Validation Server was unable to post the result to the Result Server.</string>
    <string name="nfc_communication_failed">NFC Communication Failed. Please try again.</string>
    <string name="show_result_from_server">Show Result from Document Validation Service</string>
    <string name="done">Done</string>

    <string name="result">Result from DocVal Server</string>
    <string name="face_photo_content_description">Photo of document holders face</string>
    <string name="document_is_expired">❌ Document is expired</string>
    <string name="passive_authentication_failed">❌ Data Integrity and Authenticity not confirmed.</string>
    <string name="passive_authentication_success">✅ Data Integrity and Authenticity confirmed.</string>
    <string name="chip_is_cloned">❌ Chip is cloned.</string>
    <string name="chip_is_not_cloned">✅ Chip ist not cloned.</string>
</resources>
