<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:background="@color/contentBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

		<CheckBox
			android:id="@+id/return_result_only"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="24dp"
			android:text="@string/return_result_only" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/instructions"
            android:textSize="18sp" />

        <TextView
            style="@style/Label"
            android:text="@string/can" />

        <EditText
            android:id="@+id/can"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/can_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/start_reading_using_can_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_chip_using_can" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp" />

        <TextView
            style="@style/Label"
            android:text="@string/document_number" />

        <EditText
            android:id="@+id/document_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/document_number_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textCapCharacters"
            android:maxLength="9"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <TextView
            style="@style/Label"
            android:text="@string/date_of_birth" />

        <EditText
            android:id="@+id/date_of_birth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/mrz_date_hint"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:ignore="TextFields,DuplicateSpeakableTextCheck" />

        <TextView
            style="@style/Label"
            android:text="@string/date_of_expiry" />

        <EditText
            android:id="@+id/date_of_expiry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:hint="@string/mrz_date_hint"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            tools:ignore="TextFields" />

        <Button
            android:id="@+id/start_reading_using_mrz_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/access_chip_using_mrz_info" />

    </LinearLayout>
</ScrollView>
