<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:fillViewport="true">

    <LinearLayout
        android:background="@color/contentBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hint_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/place_phone_on_document"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:enabled="false"
            android:text="@string/cancel"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/status_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="1"
            android:padding="12dp"
            android:textSize="16sp"
            app:lineHeight="32sp"
            tools:text="ACCESS_CONTROL" />

        <ProgressBar
            android:id="@+id/progressbar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/error_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textAlignment="center"
            android:textColor="@color/error"
            android:textSize="16sp"
            android:visibility="gone"
            tools:text="ERROR"
            tools:visibility="visible" />

        <Button
            android:id="@+id/done_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/done"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/show_result_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/show_result_from_server"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>
</ScrollView>
